--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
 Koszernekotki.pl to kox stronka
 <title>Koszerne kotki!</title>
+<style>
+  body {
+ background-image: url("kot.jpg");
+ background-color: #cccccc;
+}
+  </style>
