--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@ Koszernekotki.pl to kox stronka
   body {
  background-image: url("kot.jpg");
  background-color: #cccccc;
+ margin-left: auto;
+ margin-right: auto;
 }
   </style>
