--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-Koszernekotki.pl to kox stronka
+<div id="div">Koszernekotki.pl to kox stronka</div>
 <title>Koszerne kotki!</title>
 <style>
   body {
  background-image: url("kot.jpg");
- background-color: #cccccc;
+    background-color: #cccccc;
+  }
+ #div{
  margin-left: auto;
  margin-right: auto;
 }
