--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <title>Koszerne kotki!</title>
 <style>
   body {
- background-image: url("kot.jpg");
     background-color: #cccccc;
   }
  #div{
  margin-left: auto;
  margin-right: auto;
+Font-size: 20px;
 }
   </style>
+<Img src="kot.jpg">
