--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
  #div{
  margin-left: auto;
  margin-right: auto;
-Font-size: 0.5em;
+Font-size: 30px;
+.kot{
+width: 1em
+}
 }
   </style>
-<Img src="kot.jpg">
+<Img src="kot.jpg" claas="kot">
+<!-- Koszernosc to zart na tej stronie. Is a joke! Plis dont take it too hard-->
+<Br>
+^Kot<Br>
+ヾ( ͝° ͜ʖ͡°)ノ♪┏(＾0＾)┛ヘ(￣ω￣ヘ)ƪ(˘⌣˘)ʃ♪ \(^ω^\ )♪(┌・。・)┌└( ＾ω＾)」(｡･ω･｡)ﾉ♡(´∩｡• ᵕ •｡∩`) (〃ﾟ3ﾟ〃)(っ˘з(˘⌣˘ )(๑˙❥˙๑)(っ˘з(˘⌣˘ )(´∩｡• ᵕ •｡∩`) ෆ╹ .̮ ╹ෆ(•ө•)♡
