--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <title>Koszerne kotki!</title>
 <style>
   body {
-    background-color: #cccccc;
+    background-color: #aaaabb;
   }
  #div{
  margin-left: auto;
  margin-right: auto;
-Font-size: 30px;
+Font-size: 50px;
+}
 .kot{
 width: 1em
-}
 }
   </style>
 <Img src="kot.jpg" claas="kot">
