--- a/tajny-kot.html
+++ b/tajny-kot.html
@@ -1,8 +1,8 @@
 Patrzeć nie oznacza widzieć.<br>
-<div class="secret" >Widzisz? Badelajda Towakowiak by cię pochwaliła!<div/>
+<div class="secret" >Widzisz? Badelajda Towakowiak by cię pochwaliła! :-)<div/>
 <style>
 .secret{
-font-color:white;
+color:white;
 
 }
 <style/>
