--- a/404.html
+++ b/404.html
@@ -1,1 +1,3 @@
-Zbładziłeś? Nie martw się! Kliknij <a href="/"> [TUTAJ] <a/> by zaznać kotków 🐈!
+Zbładziłeś? Nie martw się! 
+Kliknij <a href="/"> [TUTAJ] <a/> by zaznać kotków 
+<a href="tajny-kot">🐈<a/>!
