--- a/404.html
+++ b/404.html
@@ -1,3 +1,11 @@
 Zbładziłeś? Nie martw się! 
 Kliknij <a href="/"> [TUTAJ] <a/> by zaznać kotków 
-<a href="tajny-kot">🐈<a/>!
+<a href="tajny-kot" class="a">🐈<a/>!
+<Style>
+
+.a{
+color:black;
+text-decoration: none; 
+}
+
+<style/>
