--- a/tajny-kot.html
+++ b/tajny-kot.html
@@ -1,8 +1,16 @@
+<body onload="load()">
+
 Patrzeć nie oznacza widzieć.<br>
 <div class="secret" >Widzisz? Badelajda Towakowiak by cię pochwaliła! :-)<div/>
 <style>
 .secret{
 color:white;
-
+backgrand-coloe:white;
 }
 <style/>
+<script>
+var load = () => {
+Alert(1)
+}
+
+<Script/>
