--- a/tajny-kot.html
+++ b/tajny-kot.html
@@ -1,5 +1,5 @@
 <body onload="load()">
-
+.
 Patrzeć nie oznacza widzieć.<br>
 <div class="secret" >Widzisz? Badelajda Towakowiak by cię pochwaliła! :-)<div/>
 <style>
@@ -13,5 +13,5 @@ var load = () => {
 Alert(1)
 }
 
-<Script/>
+<script/>
 v0.0
