--- a/tajny-kot.html
+++ b/tajny-kot.html
@@ -1,17 +1,17 @@
 <body onload="load()">
 .
 Patrzeć nie oznacza widzieć.<br>
-<div class="secret" >Widzisz? Badelajda Towakowiak by cię pochwaliła! :-)<div/>
+<div class="secret" >Widzisz? Badelajda Towakowiak by cię pochwaliła! :-)</div>
 <style>
 .secret{
 color:white;
 backgrand-coloe:white;
 }
-<style/>
+</style>
 <script>
 var load = () => {
 Alert(1)
 }
 
-<script/>
+</script>
 v0.0
