--- a/tajny-kot.html
+++ b/tajny-kot.html
@@ -1,5 +1,5 @@
 <body onload="load()">
-,
+
 Patrzeć nie oznacza widzieć.<br>
 <div class="secret" >Widzisz? Badelajda Towakowiak by cię pochwaliła! :-)</div>
 <style>
@@ -10,8 +10,8 @@ backgrand-coloe:white;
 </style>
 <script>
 var load = () => {
-Alert(1)
+alert(1)
 }
 
 </script>
-v0.0
+v0.1
