--- a/tajny-kot.html
+++ b/tajny-kot.html
@@ -9,9 +9,11 @@ backgrand-coloe:white;
 }
 </style>
 <script>
+var bajon = ()=> {window.location.href="/"}
 var load = () => {
-alert(1)
+setTimeout(bajon,1000)
+alert(0)
 }
 
 </script>
-v0.1
+v0.2
