--- a/index.html
+++ b/index.html
@@ -20,3 +20,4 @@ width: 1em
 ヾ( ͝° ͜ʖ͡°)ノ♪┏(＾0＾)┛ヘ(￣ω￣ヘ)ƪ(˘⌣˘)ʃ♪ \(^ω^\ )♪(┌・。・)┌└( ＾ω＾)」(｡･ω･｡)ﾉ♡(´∩｡• ᵕ •｡∩`) (〃ﾟ3ﾟ〃)(っ˘з(˘⌣˘ )(๑˙❥˙๑)(っ˘з(˘⌣˘ )(´∩｡• ᵕ •｡∩`) ෆ╹ .̮ ╹ෆ(•ө•)♡
 <br>
 <div class="rec" > Super fajna strona, orginalny pomysł niesamowite wykonanie - Maciek</div>
+<div class="rec> Najlepsza strona jaką widziałem! - Krzysztof</div>
