--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Font-size: 50px;
 width: 1em
 }
   </style>
-<Img src="kot.jpg" claas="kot">
+<Img src="1637663711041.jpg" claas="kot">
 <!-- Koszernosc to zart na tej stronie. Is a joke! Plis dont take it too hard-->
 <Br>
 ^Kot<Br>
