--- a/index.html
+++ b/index.html
@@ -21,3 +21,4 @@ width: 1em
 <br>
 <div class="rec" > Super fajna strona, orginalny pomysł niesamowite wykonanie - Maciek</div>
 <div class="rec"> Najlepsza strona jaką widziałem! - Krzysztof</div>
+<div class="rec"> Bardzo wyśmienite! - Mieszko </div>
