--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@ Font-size: 50px;
 .kot{
 width: 1em
 }
+  .rec{
+  background-color: #bbbbcc;
+  }
   </style>
 <Img src="1637663711041.jpg" claas="kot">
 <!-- Koszernosc to zart na tej stronie. Is a joke! Plis dont take it too hard-->
