--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Koszernosc to zart na tej stronie. Is a joke! Plis dont take it too hard-->
 <div id="div">Koszernekotki.pl to kox stronka</div>
 <title>Koszerne kotki!</title>
 <style>
@@ -7,7 +8,8 @@
  #div{
  margin-left: auto;
  margin-right: auto;
-Font-size: 50px;
+ text-align: center;
+ font-size: 50px;
 }
 .kot{
 width: 1em
@@ -15,6 +17,11 @@ width: 1em
   .rec{
   background-color: #bbbbcc;
     margin: 5px;
+  }
+  .recbox{
+     margin-left: auto;
+ margin-right: auto;
+ text-align: center;
   }
   </style>
 <Img src="1637663711041.jpg" claas="kot">
