--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
  margin-right: auto;
  text-align: center;
  font-size: 50px;
+ background-color: #58e026;
+ margin-up: 10px;
 }
 .kot{
 width: 1em
