--- a/index.html
+++ b/index.html
@@ -21,12 +21,16 @@ width: 1em
   .rec{
   background-color: #bbbbcc;
     margin: 5px;
+    margin-left: auto;
+    margin-right: auto;
   }
   .recbox{
      margin-left: auto;
  margin-right: auto;
  text-align: center;
   }
+  
+  .h20{height:20px}
   </style>
 <Img src="1637663711041.jpg" claas="kot">
 <!-- Koszernosc to zart na tej stronie. Is a joke! Plis dont take it too hard-->
@@ -34,8 +38,8 @@ width: 1em
 ^Kot<Br>
 ヾ( ͝° ͜ʖ͡°)ノ♪┏(＾0＾)┛ヘ(￣ω￣ヘ)ƪ(˘⌣˘)ʃ♪ \(^ω^\ )♪(┌・。・)┌└( ＾ω＾)」(｡･ω･｡)ﾉ♡(´∩｡• ᵕ •｡∩`) (〃ﾟ3ﾟ〃)(っ˘з(˘⌣˘ )(๑˙❥˙๑)(っ˘з(˘⌣˘ )(´∩｡• ᵕ •｡∩`) ෆ╹ .̮ ╹ෆ(•ө•)♡
 <br>
-<div class="recbox">
-<div class="rec" > Super fajna strona, orginalny pomysł niesamowite wykonanie - Maciek</div>
-<div class="rec"> Najlepsza strona jaką widziałem! - Krzysztof</div>
-<div class="rec"> Bardzo wyśmienite! - Mieszko </div>
+<div class="recbox h20">
+<div class="rec h20" > Super fajna strona, orginalny pomysł niesamowite wykonanie - Maciek</div>
+<div class="rec h20"> Najlepsza strona jaką widziałem! - Krzysztof</div>
+<div class="rec h20"> Bardzo wyśmienite! - Mieszko </div>
 </div>
