--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@ width: 1em
 }
   img{margin:10px}
   .rec{
-  background-color: #bbbbcc;
+    background-color: #bbbbcc;
+    position: relative; 
+    display: inline-block; 
+    width: 33%; 
+    
   }
   .recbox{
      margin-left: auto;
