--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ width: 1em
 ヾ( ͝° ͜ʖ͡°)ノ♪┏(＾0＾)┛ヘ(￣ω￣ヘ)ƪ(˘⌣˘)ʃ♪ \(^ω^\ )♪(┌・。・)┌└( ＾ω＾)」(｡･ω･｡)ﾉ♡(´∩｡• ᵕ •｡∩`) (〃ﾟ3ﾟ〃)(っ˘з(˘⌣˘ )(๑˙❥˙๑)(っ˘з(˘⌣˘ )(´∩｡• ᵕ •｡∩`) ෆ╹ .̮ ╹ෆ(•ө•)♡
 <br>
 <div class="recbox h20">
-<div class="rec h20" > Super fajna strona, orginalny pomysł niesamowite wykonanie - Maciek</div>
-<div class="rec h20"> Najlepsza strona jaką widziałem! - Krzysztof</div>
-<div class="rec h20"> Bardzo wyśmienite! - Mieszko </div>
+<div class="rec" > Super fajna strona, orginalny pomysł niesamowite wykonanie - Maciek</div>
+<div class="rec"> Najlepsza strona jaką widziałem! - Krzysztof</div>
+<div class="rec"> Bardzo wyśmienite! - Mieszko </div>
 </div>
