--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ width: 1em
 ^Kot<Br>
 ヾ( ͝° ͜ʖ͡°)ノ♪┏(＾0＾)┛ヘ(￣ω￣ヘ)ƪ(˘⌣˘)ʃ♪ \(^ω^\ )♪(┌・。・)┌└( ＾ω＾)」(｡･ω･｡)ﾉ♡(´∩｡• ᵕ •｡∩`) (〃ﾟ3ﾟ〃)(っ˘з(˘⌣˘ )(๑˙❥˙๑)(っ˘з(˘⌣˘ )(´∩｡• ᵕ •｡∩`) ෆ╹ .̮ ╹ෆ(•ө•)♡
 <br>
-<div class="recbox h20">
+<div class="recbox">
 <div class="rec" > Super fajna strona, orginalny pomysł niesamowite wykonanie - Maciek</div>
 <div class="rec"> Najlepsza strona jaką widziałem! - Krzysztof</div>
 <div class="rec"> Bardzo wyśmienite! - Mieszko </div>
