--- a/iso/index.html
+++ b/iso/index.html
@@ -1,4 +1,4 @@
 ISO list: (Klikni by pobrać)<br>
-<a href="TempleOS.ISO"> Linux Zamek [Po czesku](Install via linia poleceń)</a><br>
+<a href="data:text/Ciumkaj linuxa swojeo a nie cudzy OS tykasz!!!"> Linux Zamek [Po czesku](Install via linia poleceń)</a><br>
 <a href="https://winworldpc.com/download/3fe280b0-c2af-e280-9918-c39a11c3a4ef/from/c3ae6ee2-8099-713d-3411-c3a6e280947e"> Windows 2K (Kox)</a> %3C= Jeśli myślisz że jesteś coll to wybież to<br>  
 <a href="https://winworldpc.com/download/413638c2-8d18-c39a-11c3-a4e284a2c3a5/from/c3ae6ee2-8099-713d-3411-c3a6e280947e"> Windows 2K (Normal)</a><br>
