--- a/index.html
+++ b/index.html
@@ -1,39 +1,10 @@
 <!-- Koszernosc to zart na tej stronie. Is a joke! Plis dont take it too hard-->
 <div id="div">Koszernekotki.pl to kox stronka</div>
+
 <title>Koszerne kotki!</title>
-<style>
-  body {
-    background-color: #aaaabb;
-    text-align: center;
-  }
- #div{
- margin-left: auto;
- margin-right: auto;
- text-align: center;
- font-size: 50px;
- background-color: #58e026;
- margin-up: 10px;
- margin-down: 15px;
-}
-.kot{
-width: 1em
-}
-  img{margin:10px}
-  .rec{
-    background-color: #bbbbcc;
-    position: relative; 
-    display: inline-block; 
-    width: 33%; 
-    
-  }
-  .recbox{
-     margin-left: auto;
- margin-right: auto;
- text-align: center;
-  }
-  
-  .h20{height:20px}
-  </style>
+<link rel="stylesheet" href="styl.css">
+
+<style></style>
 <Img src="1637663711041.jpg" claas="kot">
 <!-- Koszernosc to zart na tej stronie. Is a joke! Plis dont take it too hard-->
 <Br>
