--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!-- Koszernosc to zart na tej stronie. Is a joke! Plis dont take it too hard-->
+<head> <meta name="google-site-verification" content="eZ1mijABVySfKEDrYC9p7JIHczcRRgB9Y6Cu3tLCt-k" /> </head>
 <div id="div">Koszernekotki.pl to kox stronka</div>
 
 <title>Koszerne kotki!</title>
