--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!-- Koszernosc to zart na tej stronie. Is a joke! Plis dont take it too hard-->
-<head> <meta name="google-site-verification" content="eZ1mijABVySfKEDrYC9p7JIHczcRRgB9Y6Cu3tLCt-k" /> </head>
+<head> <meta name="google-site-verification" content="eZ1mijABVySfKEDrYC9p7JIHczcRRgB9Y6Cu3tLCt-k" />
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7063896297046693"
+     crossorigin="anonymous"></script>
+ </head>
 <div id="div">Koszernekotki.pl to kox stronka</div>
 
 <title>Koszerne kotki!</title>
