--- a/404.html
+++ b/404.html
@@ -1,12 +1,50 @@
-Zbładziłeś? Nie martw się! 
-Kliknij <a href="/"> [TUTAJ] <a/> by zaznać kotków 
-<a href="tajny-kot" class="a">🐈<a/>!
-<Style>
+<html lang="pl">
+	<head>
+		<style>
+		
+			#linkacz{
+			color: red;
+			text-decoration: none; 
+			font-size:20px;
+			}
+			
+			#linkacz:hover{
+			font-size: 24px;
+			}
+			
+			#container{
+			outline-style: solid;
+			margin-left: 128px;
+			margin-right: 128px;
+			padding-top: 1px;
+			padding-bottom: 24px;
+			background-color: #BEBEFF;
+			}
+			
+			#copyright{
+			position:absolute;
+			bottom:0;
+			width:100%;
+			margin-bottom: 5px;
+			}
+			
+			body{
+			overflow: hidden;
+			background-color: #DDDDFF;
+			font-family: sans-serif;
+			text-align: center;
+			margin-top: 64px;
+			}
+		</style>
+	</head>
 
-.a{
-color:black;
-text-decoration: none; 
-font-size:20px;
-}
+	<body>
+		<div id="container">
+		<h1 style="font-family: Comic Sans MS;">Zbłądziłeś?</h1>
+		Nie martw się! Kliknij <a href="/" id="linkacz"> [TUTAJ] <a/> by zaznać kotków 
+		<a href="tajny-kot" style="cursor: default;" style="underline: none;">🐈<a/>!
+		</div>
+		<div id="copyright" style="padding-top: 5px;">&copy; 2022 made by Koliw</div>
+	</body>
 
-<style/>
+</html>
