--- a/404.html
+++ b/404.html
@@ -42,6 +42,11 @@
 	</head>
 
 	<body>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZT4BKL8E35"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date());gtag('config', 'G-ZT4BKL8E35');
+		</script>
 		<div id="container">
 		<h1 style="font-family: Comic Sans MS;">Zbłądziłeś?</h1>
 		Nie martw się! Kliknij <a href="/" id="linkacz"> [TUTAJ] <a/> by zaznać kotków 
