--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
 <!-- Koszernosc to zart na tej stronie. Is a joke! Plis dont take it too hard-->
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZT4BKL8E35"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZT4BKL8E35');
+</script>
+
 <head> <meta name="google-site-verification" content="eZ1mijABVySfKEDrYC9p7JIHczcRRgB9Y6Cu3tLCt-k" />
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7063896297046693"
      crossorigin="anonymous"></script>
