--- a/index.html
+++ b/index.html
@@ -1,22 +1,31 @@
 <!-- Koszernosc to zart na tej stronie. Is a joke! Plis dont take it too hard-->
-<head> <meta name="google-site-verification" content="eZ1mijABVySfKEDrYC9p7JIHczcRRgB9Y6Cu3tLCt-k" />
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7063896297046693"
-     crossorigin="anonymous"></script>
- </head>
-<div id="div">Koszernekotki.pl to kox stronka</div>
-
-<title>Koszerne kotki!</title>
-<link rel="stylesheet" href="styl.css">
-
-<Img src="1637663711041.jpg" claas="kot">
-<!-- Koszernosc to zart na tej stronie. Is a joke! Plis dont take it too hard-->
-<Br>
-^Kot<Br>
-ヾ( ͝° ͜ʖ͡°)ノ♪┏(＾0＾)┛ヘ(￣ω￣ヘ)ƪ(˘⌣˘)ʃ♪ \(^ω^\ )♪(┌・。・)┌└( ＾ω＾)」(｡･ω･｡)ﾉ♡(´∩｡• ᵕ •｡∩`) (〃ﾟ3ﾟ〃)(っ˘з(˘⌣˘ )(๑˙❥˙๑)(っ˘з(˘⌣˘ )(´∩｡• ᵕ •｡∩`) ෆ╹ .̮ ╹ෆ(•ө•)♡kn
-<br>
-<div class="recbox">
-<div class="rec" > Super fajna strona, orginalny pomysł, niesamowite wykonanie - Maciek</div>
-<div class="rec"> Najlepsza strona jaką widziałem! - Krzysztof</div>
-<div class="rec"> Bardzo wyśmienite! - Mieszko </div>
-</div>
-
+<head>
+   <meta name="google-site-verification" content="eZ1mijABVySfKEDrYC9p7JIHczcRRgB9Y6Cu3tLCt-k" />
+   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7063896297046693"
+      crossorigin="anonymous"></script>
+	    <title>Koszerne kotki!</title>
+		<link rel="stylesheet" href="styl.css">
+	  
+	  <style>
+		.rec{
+		min-width: 33%;
+		}
+	  
+	  </style>
+</head>
+<body>
+   <div id="div">Koszernekotki.pl to kox stronka</div>
+   <div id="otherthantitle">
+   <Img src="1637663711041.jpg" claas="kot">
+   <!-- Koszernosc to zart na tej stronie. Is a joke! Plis dont take it too hard-->
+   <Br>
+   ^Kot<Br>
+   ヾ( ͝° ͜ʖ͡°)ノ♪┏(＾0＾)┛ヘ(￣ω￣ヘ)ƪ(˘⌣˘)ʃ♪ \(^ω^\ )♪(┌・。・)┌└( ＾ω＾)」(｡･ω･｡)ﾉ♡(´∩｡• ᵕ •｡∩`) (〃ﾟ3ﾟ〃)(っ˘з(˘⌣˘ )(๑˙❥˙๑)(っ˘з(˘⌣˘ )(´∩｡• ᵕ •｡∩`) ෆ╹ .̮ ╹ෆ(•ө•)♡kn
+   <br>
+   <div class="recbox">
+      <div class="rec" > Super fajna strona, orginalny pomysł, niesamowite wykonanie - Maciek</div>
+      <div class="rec"> Najlepsza strona jaką widziałem! - Krzysztof</div>
+      <div class="rec"> Bardzo wyśmienite! - Mieszko </div>
+   </div>
+   </div>
+</body>
