--- a/t.htm
+++ b/t.htm
@@ -3,34 +3,41 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
-p {
-  text-align: center;
+p, div{
   font-size: 60px;
-  margin-top: auto;
-  
+  display: grid;
+  place-items: center
 }
 </style>
 </head>
 <body>
 
-<p id="czas"></p>
-
+<div >
+<p id="czas">...</p>
+</div>
 <script>
 var countDownDate = new Date("Jul 4, 2022 10:00:00").getTime();
-var x = setInterval(function() {
+let f = () => {
   var now = new Date().getTime();
   var distance = countDownDate - now;
   var days = Math.floor(distance / (1000 * 60 * 60 * 24));
   var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
   var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
   var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+  if (hours<10) hours = "0"+hours
+  if (minutes<10) minutes = "0"+minutes
+  if (seconds<10) seconds = "0"+seconds
+
+
   document.getElementById("czas").innerHTML = days + "d " + hours + "h "
   + minutes + "m " + seconds + "s ";
   if (distance < 0) {
     clearInterval(x);
     document.getElementById("czas").innerHTML = ":-)";
   }
-}, 1000);
+}
+var x = setInterval(f, 1000);
+f()
 </script>
 
 </body>
