--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
    <div id="div">Koszernekotki.pl to kox stronka</div>
    <div id="otherthantitle">
-   <Img src="1637663711041.jpg" claas="kot">
+   <img src="1637663711041.jpg" claas="kot" height="771" width="838">
    <!-- Koszernosc to zart na tej stronie. Is a joke! Plis dont take it too hard-->
    <Br>
    ^Kot<Br>
