--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	  </style>
 </head>
 <body>
-   <div id="div">Koszernekotki.pl to kox stronka</div>
+   <div id="div">Koszernekotki<span style="display:none">[</span>.<span style="display:none">]</span>pl to kox stronka</div> 
    <div id="otherthantitle">
    <img src="1637663711041.jpg" claas="kot" height="771" width="838">
    <!-- Koszernosc to zart na tej stronie. Is a joke! Plis dont take it too hard-->
