--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Koszernosc to zart na tej stronie. Is a joke! Plis dont take it too hard-->
+<!-- Koszernosc to zart na tej stronie.-->
 <head>
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZT4BKL8E35"></script>
 <script>
@@ -33,7 +33,7 @@
 			Tutaj znajdziesz różne rzeczy, które mogą ci się przydać w życiu! Na przykład... eeee nie wiem... sam se znajdź.
 		</div>
 		
-		ヾ( ͝° ͜ʖ͡°)ノ♪┏(＾0＾)┛ヘ(￣ω￣ヘ)ƪ(˘⌣˘)ʃ♪ \(^ω^\ )♪(┌・。・)┌└( ＾ω＾)」(｡･ω･｡)ﾉ♡(´∩｡• ᵕ •｡∩`) (〃ﾟ3ﾟ〃)(っ˘з(˘⌣˘ )(๑˙❥˙๑)(っ˘з(˘⌣˘ )(´∩｡• ᵕ •｡∩`) ෆ╹ .̮ ╹ෆ(•ө•)♡ uwu
+		ヾ( ͝° ͜ʖ͡°)ノ♪┏(＾0＾)┛ヘ(￣ω￣ヘ)ƪ(˘⌣˘)ʃ♪ \(^ω^\ )♪(┌・。・)┌└( ＾ω＾)」(｡･ω･｡)ﾉ♡(´∩｡• ᵕ •｡∩`) (〃ﾟ3ﾟ〃)(っ˘з(˘⌣˘ )(๑˙❥˙๑)(っ˘з(˘⌣˘ )(´∩｡• ᵕ •｡∩`) ෆ╹ .̮ ╹ෆ(•ө•)♡ <span style="display: none" id="uwu">uwu</span>
 		
 			<div class="kot">
 				<img src="1637663711041.jpg" claas="kot" />
