--- a/index.html
+++ b/index.html
@@ -1,41 +1,28 @@
 <!-- Koszernosc to zart na tej stronie.-->
 <head>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZT4BKL8E35"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-ZT4BKL8E35');
-</script>
-   <meta name="google-site-verification" content="eZ1mijABVySfKEDrYC9p7JIHczcRRgB9Y6Cu3tLCt-k" />
-   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7063896297046693"
-      crossorigin="anonymous"></script>
-	    <title>Koszerne kotki!</title>
-		<link rel="stylesheet" href="styl.css">
-	  
-	  <style>
-		.rec{
-		min-width: 33%;
-		}
-	  
-	  </style>
+	<meta charset="utf-8">
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZT4BKL8E35"></script>
+	<script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'G-ZT4BKL8E35');</script>
+	<meta name="google-site-verification" content="eZ1mijABVySfKEDrYC9p7JIHczcRRgB9Y6Cu3tLCt-k" />
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7063896297046693" crossorigin="anonymous"></script>
+	<title>Koszerne kotki!</title>
+	<link rel="stylesheet" href="styl.css">
 </head>
 <body>
-   <div id="container">
+	<div id="container">
 		<div id="header">
 			<img src="kk.png" draggable="false" style="vertical-align: text-bottom;" alt="KoszerneKotki.pl" /> to kox stronka!
 		</div>
 		<div id="content">
-		<h1>Witamy na Koszernych Kotkach!!!1111</h1>
-		<div class="contentmaintext">
-			Cieszymy się, że odwiedziłeś naszą stronę!<br>
-			Tutaj znajdziesz różne rzeczy, które mogą ci się przydać w życiu! Na przykład... eeee nie wiem... sam se <span id="boo" onclick="boo()"><i>znajdź.</i></span>
-		</div>
-		
-		ヾ( ͝° ͜ʖ͡°)ノ♪┏(＾0＾)┛ヘ(￣ω￣ヘ)ƪ(˘⌣˘)ʃ♪ \(^ω^\ )♪(┌・。・)┌└( ＾ω＾)」(｡･ω･｡)ﾉ♡(´∩｡• ᵕ •｡∩`) (〃ﾟ3ﾟ〃)(っ˘з(˘⌣˘ )(๑˙❥˙๑)(っ˘з(˘⌣˘ )(´∩｡• ᵕ •｡∩`) ෆ╹ .̮ ╹ෆ(•ө•)♡ 
-    <span id="uwu"><span id="uwu-arrow-up">↑</span>uwu</span>
-		
+			<h1>Witamy na Koszernych Kotkach!!!1111</h1>
+			<div class="contentmaintext">
+				Cieszymy się, że odwiedziłeś naszą stronę!<br>
+				Tutaj znajdziesz różne rzeczy, które mogą ci się przydać w życiu! Na przykład... eeee nie wiem... sam se <span id="boo" onclick="boo()"><i>znajdź.</i></span>
+			</div>
+			
+			ヾ( ͝° ͜ʖ͡°)ノ♪┏(＾0＾)┛ヘ(￣ω￣ヘ)ƪ(˘⌣˘)ʃ♪ \(^ω^\ )♪(┌・。・)┌└( ＾ω＾)」(｡･ω･｡)ﾉ♡(´∩｡• ᵕ •｡∩`) (〃ﾟ3ﾟ〃)(っ˘з(˘⌣˘ )(๑˙❥˙๑)(っ˘з(˘⌣˘ )(´∩｡• ᵕ •｡∩`) ෆ╹ .̮ ╹ෆ(•ө•)♡
+			<span id="uwu"><span id="uwu-arrow-up">↑</span>uwu</span>
+			
 			<div class="kot">
 				<img src="1637663711041.jpg" claas="kot" />
 				<Br>
@@ -47,20 +34,44 @@
 				<div class="rec"> Bardzo wyśmienite! - Mieszko </div>
 				<div class="rec"> Ta strona jest tak piękna że aż straciłem wzrok! - Prawdopodobnie Ty </div>
 			</div>
-		<!-- </div> Footer musi być w #content bo coś sie kolory wylewają -->
-		<div id="footer">&copy; 2022 A.D osoba hostująca nwm</div>
-   </div>
-   <script type="text/javascript">
-     const boo = () => {
-        const el = document.getElementById('boo');
-        if(!el){
-        		document.body.classList.add("lepszyfont");
-        		return;
-        	}
-
-        el.innerHTML = "znajdź <a href=\"javascript:boo()\" style=\"text-decoration: none; color:black; font-family: SF Gushing Meadow;\">*</a>"
-        el.removeAttribute('id');
-        el.removeAttribute('onclick')
-     }
-   </script>
-</body>
+			<div class="linki">
+				Linki:<br>
+				<div style="text-align: right;">
+					<ul>
+						<li><a href='testczytania'>Test czytana</a></li><!-- i nie sprawdzaj co robi ?r=13 ... serio -->
+						<li><a href="#">Jakiś zegarek</a></li>
+					</ul>
+				</div>
+			</div>
+			<!-- </div> Footer musi być w #content bo coś sie kolory wylewają -->
+			<div id="footer">&copy; 2022 A.D osoba hostująca nwm</div>
+		</div>
+		<script type="text/javascript">
+		const boo = () => {
+		const el = document.getElementById('boo');
+		if(!el){
+				document.body.classList.add("lepszyfont");
+				const uwu = document.getElementById('uwu_znaczek')
+				const znaczki = ["*","❉","⚹","✺","﹡","⁕","✷"]
+				let mirror = 0
+				uwu.setAttribute('href',"https://www.youtube.com/watch?v=dQw4w9WgXcQ")
+				setInterval(()=>{
+					uwu.innerText = znaczki[Math.floor(Math.random() * znaczki.length)];
+					if(mirror>0){
+						mirror--;
+						document.body.classList.add("mirrorme");
+					}else{
+						document.body.classList.remove("mirrorme");
+					}
+					if(Math.random()>0.99){
+						mirror+=20;
+					}
+				},40)
+				return;
+			}
+		el.innerHTML = "znajdź <a id=\"uwu_znaczek\"href=\"javascript:boo()\" style=\"text-decoration: none; color:black; font-family: SF Gushing Meadow;\">*</a>"
+		el.removeAttribute('id');
+		el.removeAttribute('onclick')
+		}
+		</script>
+	</body>
