jeszcze więcej jajeczek wielkanocnych!

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
 	<div id="container">
 		<div id="header">
-			<img src="kk.png" draggable="false" style="vertical-align: text-bottom;" alt="KoszerneKotki.pl" /> to kox stronka!
+			<img src="img/kk.png" draggable="false" style="vertical-align: text-bottom;" alt="KoszerneKotki.pl" /> to kox stronka!
 		</div>
 		<div id="content">
-			<h1>Witamy na Koszernych Kotkach!!!1111</h1>
+			<h1 id='welcome-text'>Witamy na Koszernych Kotkach!!!1111</h1>
 			<div class="contentmaintext">
 				Cieszymy się, że odwiedziłeś naszą stronę!<br>
 				Tutaj znajdziesz różne rzeczy, które mogą ci się przydać w życiu! Na przykład... eeee nie wiem... sam se <span id="boo" onclick="boo()"><i>znajdź.</i></span>
@@ -24,7 +24,7 @@
 			<span id="uwu"><span id="uwu-arrow-up">↑</span>uwu</span>
 			
 			<div class="kot">
-				<img src="1637663711041.jpg" claas="kot" />
+				<img src="img/kot-qusona.jpg" claas="kot" id="fotakota" />
 				<Br>
 				^ Kot ^
 			</div>
@@ -74,4 +74,5 @@
 		el.removeAttribute('onclick')
 		}
 		</script>
+		<script type="text/javascript" src="script.js"></script>
 	</body>
