--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				<div style="text-align: right;">
 					<ul>
 						<li><a href='testczytania'>Test czytana</a></li><!-- i nie sprawdzaj co robi ?r=13 ... serio -->
-						<li><a href="#header-clock" onclick="pokazczas()">Jakiś zegarek</a></li>
+						<li><a href="#header-clock" onclick="/*pokazczas()*/">Jakiś zegarek</a></li>
 					</ul>
 				</div>
 			</div>
